src/evaluator/expression/function/tests/snapshots/monkey_interpreter__evaluator__expression__function__tests__test_evaluator_function_nodes_case1.snap
---
source: src/evaluator/expression/function/tests/mod.rs
expression: "evaluator.evaluate(crate::syntax_analysis::SyntaxAnalysis::from(crate::lexical_analysis::LexicalAnalysis::from(code)))"

---
Function {
    parameters: [
        "x",
    ],
    block: Block {
        nodes: [
            Expression {
                expression: Infix {
                    left_hand: Identifier {
                        identifier: "x",
                    },
                    operator_token: Plus,
                    right_hand: Integer {
                        integer_token: Integer {
                            literal: "3",
                        },
                    },
                },
            },
        ],
    },
}
